fixed minor spacing issues on sm by removing margin and padding from #mainContainer on vw < 340px

--- a/Code_Now/css/styles.css
+++ b/Code_Now/css/styles.css
@@ -25,6 +25,11 @@ font-family: 'Work Sans', sans-serif; */
     #googleIcon, #appleIcon, #githubIcon, #linkedinIcon {
         margin-right: 0.25rem !important;
     }
+
+    #mainContainer {
+        margin: 0;
+        padding: 0;
+    }
 }
 
 
